Add Both option to all signature type dropdowns
Updated remaining 5 signature type dropdowns to include Both option:
- caf-sig-type (CAF Classification)
- conserved-sig-type (Conserved Signatures)
- atlas-comp-sig-type (Atlas Comparison)
- meta-sig-type (Meta-Analysis)
- sigcorr-sig-type (Signature Correlation)

Also standardized label format to show protein counts consistently.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -825,6 +825,7 @@
                             <select id="cima-ct-corr-sigtype">
                                 <option value="CytoSig">CytoSig (43 cytokines)</option>
                                 <option value="SecAct">SecAct (1,170 proteins)</option>
+                                <option value="both">Both</option>
                             </select>
                         </div>
                         <div class="control-group">
@@ -909,6 +910,7 @@
                         <select id="biochem-signature-type">
                             <option value="CytoSig">CytoSig (44 cytokines)</option>
                             <option value="SecAct">SecAct (1,249 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group" style="position: relative;">
@@ -968,6 +970,7 @@
                         <select id="metab-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (top 100 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -1035,6 +1038,7 @@
                         <select id="diff-signature-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                 </div>
@@ -1061,6 +1065,7 @@
                         <select id="cima-ct-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group" style="position: relative;">
@@ -1108,6 +1113,7 @@
                         <select id="biochem-scatter-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group" style="position: relative;">
@@ -1206,6 +1212,7 @@
                         <select id="pop-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                 </div>
@@ -1309,6 +1316,7 @@
                         <select id="inflam-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group" style="position: relative;">
@@ -1367,6 +1375,7 @@
                             <select id="inflam-ct-corr-sigtype">
                                 <option value="CytoSig">CytoSig (43 cytokines)</option>
                                 <option value="SecAct">SecAct (1,170 proteins)</option>
+                                <option value="both">Both</option>
                             </select>
                         </div>
                         <div class="control-group">
@@ -1458,6 +1467,7 @@
                         <select id="inflam-disease-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group" style="position: relative;">
@@ -1513,6 +1523,7 @@
                         <select id="inflam-diff-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                 </div>
@@ -1551,6 +1562,7 @@
                         <select id="treatment-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -1590,7 +1602,8 @@
                         <label>Signature Type</label>
                         <select id="validation-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
-                            <option value="SecAct">SecAct (top 100 proteins)</option>
+                            <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -1631,6 +1644,7 @@
                         <select id="severity-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group" style="position: relative;">
@@ -1672,8 +1686,9 @@
                     <div class="control-group">
                         <label>Signature Type</label>
                         <select id="drivers-sig-type">
-                            <option value="CytoSig">CytoSig (44 cytokines)</option>
-                            <option value="SecAct">SecAct (1249 proteins)</option>
+                            <option value="CytoSig">CytoSig (43 cytokines)</option>
+                            <option value="SecAct">SecAct (100 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -1775,8 +1790,9 @@
                     <div class="control-group">
                         <label>Signature Type</label>
                         <select id="ct-sig-type">
-                            <option value="CytoSig">CytoSig (44 cytokines)</option>
+                            <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (top 50 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -1805,8 +1821,9 @@
                     <div class="control-group">
                         <label>Signature Type</label>
                         <select id="cancer-sig-type">
-                            <option value="CytoSig">CytoSig (44 cytokines)</option>
+                            <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (top 50 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -1964,8 +1981,9 @@
                     <div class="control-group">
                         <label>Signature Type</label>
                         <select id="caf-sig-type">
-                            <option value="CytoSig">CytoSig</option>
-                            <option value="SecAct">SecAct</option>
+                            <option value="CytoSig">CytoSig (43 cytokines)</option>
+                            <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                 </div>
@@ -2134,6 +2152,7 @@
                         <select id="conserved-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (top 100 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -2173,8 +2192,9 @@
                     <div class="control-group">
                         <label>Signature Type</label>
                         <select id="atlas-comp-sig-type">
-                            <option value="CytoSig">CytoSig</option>
-                            <option value="SecAct">SecAct</option>
+                            <option value="CytoSig">CytoSig (43 cytokines)</option>
+                            <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                 </div>
@@ -2228,8 +2248,9 @@
                     <div class="control-group">
                         <label>Signature Type</label>
                         <select id="meta-sig-type">
-                            <option value="CytoSig">CytoSig</option>
-                            <option value="SecAct">SecAct</option>
+                            <option value="CytoSig">CytoSig (43 cytokines)</option>
+                            <option value="SecAct">SecAct (1,170 proteins)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                 </div>
@@ -2254,8 +2275,9 @@
                     <div class="control-group">
                         <label>Signature Type</label>
                         <select id="sigcorr-sig-type">
-                            <option value="CytoSig">CytoSig</option>
+                            <option value="CytoSig">CytoSig (43 cytokines)</option>
                             <option value="SecAct">SecAct (top 50)</option>
+                            <option value="both">Both</option>
                         </select>
                     </div>
                     <div class="control-group">
