--- a/visualization/index.html
+++ b/visualization/index.html
@@ -1783,8 +1783,8 @@
             <p class="narrow">Explore cytokine activity signatures across 35 organs and 376 cell types from the Human Cell Atlas.</p>
 
             <div class="tabs">
-                <button class="tab active" data-tab="organ-map">Organ Map</button>
-                <button class="tab" data-tab="celltype-heatmap">Cell Type Heatmap</button>
+                <button class="tab active" data-tab="scatlas-celltypes">Cell Types</button>
+                <button class="tab" data-tab="organ-map">Organ Map</button>
                 <button class="tab" data-tab="cancer-comparison">Tumor vs Adjacent</button>
                 <button class="tab" data-tab="cancer-types">Cancer Types</button>
                 <button class="tab" data-tab="immune-infiltration">Immune Infiltration</button>
@@ -1795,7 +1795,7 @@
             </div>
 
             <!-- Organ Map Tab -->
-            <div class="tab-content active" id="tab-organ-map">
+            <div class="tab-content" id="tab-organ-map">
                 <div class="controls">
                     <div class="control-group">
                         <label>Signature Type</label>
@@ -1828,8 +1828,8 @@
                 </div>
             </div>
 
-            <!-- Cell Type Heatmap Tab -->
-            <div class="tab-content" id="tab-celltype-heatmap">
+            <!-- Cell Types Tab -->
+            <div class="tab-content active" id="tab-scatlas-celltypes">
                 <div class="controls">
                     <div class="control-group">
                         <label>Signature Type</label>
@@ -1845,16 +1845,32 @@
                             <!-- Populated dynamically -->
                         </select>
                     </div>
+                    <div class="control-group">
+                        <label>Select Protein</label>
+                        <select id="scatlas-ct-protein-dropdown" style="width: 150px;">
+                            <option value="IFNG">IFNG</option>
+                            <!-- Populated dynamically -->
+                        </select>
+                    </div>
+                    <div class="control-group" style="position: relative;">
+                        <label>Or Search</label>
+                        <input type="text" id="scatlas-ct-protein-search" placeholder="Search..."
+                               style="width: 120px; padding: 8px; border: 1px solid #ddd; border-radius: 4px;" autocomplete="off" value="IFNG">
+                        <div id="scatlas-ct-suggestions" style="position: absolute; top: 100%; left: 0; width: 120px; max-height: 200px; overflow-y: auto; background: white; border: 1px solid #ddd; border-radius: 4px; display: none; z-index: 100; box-shadow: 0 2px 8px rgba(0,0,0,0.1);"></div>
+                    </div>
                 </div>
 
-                <div class="search-box">
-                    <input type="text" id="celltype-search" placeholder="Search cell types...">
-                </div>
-
-                <div class="viz-container" style="min-height: 700px;">
-                    <div class="viz-title">Cell Type Activity Heatmap</div>
-                    <div class="viz-subtitle" id="celltype-heatmap-subtitle">Mean cytokine activity scores across cell types (top 50 most variable)</div>
-                    <div id="celltype-heatmap" class="loading">Loading...</div>
+                <div class="two-col">
+                    <div class="viz-container" style="min-height: 500px;">
+                        <div class="viz-title">Cell Type Activity Profile</div>
+                        <div class="viz-subtitle" id="scatlas-celltype-bar-subtitle">Mean activity across cell types (376 total)</div>
+                        <div id="scatlas-celltype-bar" class="loading">Loading...</div>
+                    </div>
+                    <div class="viz-container" style="min-height: 500px;">
+                        <div class="viz-title">Activity Heatmap</div>
+                        <div class="viz-subtitle" id="celltype-heatmap-subtitle">Top variable cell types x signatures</div>
+                        <div id="celltype-heatmap" class="loading">Loading...</div>
+                    </div>
                 </div>
             </div>
 
@@ -2642,9 +2658,13 @@
                 updateSeverityCorrelation();
                 updateCellDrivers();
             } else if (section === 'scatlas') {
+                // Cell Types tab (first)
+                populateScatlasCelltypeDropdown();
+                updateScatlasCelltypeBar();
+                updateCelltypeHeatmap();
+                // Organ Map tab
                 updateOrganBarChart();
                 updateOrganHeatmap();
-                updateCelltypeHeatmap();
                 updateCancerComparison();
                 updateCancerTypes();
                 updateImmuneInfiltration();
@@ -3743,12 +3763,151 @@
             });
         }
 
+        // scAtlas Cell Types - Search functions
+        function getScatlasCelltypeSignatures() {
+            const ctData = state.data.scatlascelltypes;
+            if (!ctData) return [];
+            const sigType = document.getElementById('ct-sig-type')?.value || 'CytoSig';
+            return sigType === 'CytoSig'
+                ? (ctData.cytosig_signatures || [])
+                : (ctData.secact_signatures || []);
+        }
+
+        function showScatlasCelltypeSuggestions() {
+            const input = document.getElementById('scatlas-ct-protein-search');
+            const div = document.getElementById('scatlas-ct-suggestions');
+            if (!input || !div) return;
+
+            const query = input.value.toLowerCase();
+            const sigs = getScatlasCelltypeSignatures();
+            const filtered = sigs.filter(s => s.toLowerCase().includes(query)).slice(0, 15);
+
+            if (filtered.length === 0) { div.style.display = 'none'; return; }
+
+            div.innerHTML = filtered.map(s =>
+                `<div style="padding:6px 10px;cursor:pointer;border-bottom:1px solid #eee"
+                     onmouseover="this.style.background='#f0f0f0'" onmouseout="this.style.background='white'"
+                     onclick="selectScatlasCelltypeSig('${s}')">${s}</div>`
+            ).join('');
+            div.style.display = 'block';
+        }
+
+        function selectScatlasCelltypeSig(sig) {
+            const input = document.getElementById('scatlas-ct-protein-search');
+            const dropdown = document.getElementById('scatlas-ct-protein-dropdown');
+            const div = document.getElementById('scatlas-ct-suggestions');
+            if (input) input.value = sig;
+            if (dropdown) dropdown.value = sig;
+            if (div) div.style.display = 'none';
+            updateScatlasCelltypeBar();
+        }
+
+        function populateScatlasCelltypeDropdown() {
+            const dropdown = document.getElementById('scatlas-ct-protein-dropdown');
+            const searchInput = document.getElementById('scatlas-ct-protein-search');
+            if (!dropdown) return;
+
+            const sigs = getScatlasCelltypeSignatures();
+            if (sigs.length === 0) return;
+
+            const currentValue = dropdown.value;
+            dropdown.innerHTML = sigs.map(s =>
+                `<option value="${s}">${s}</option>`
+            ).join('');
+
+            // Restore selection or default
+            if (sigs.includes(currentValue)) {
+                dropdown.value = currentValue;
+            } else if (sigs.includes('IFNG')) {
+                dropdown.value = 'IFNG';
+            } else {
+                dropdown.value = sigs[0] || '';
+            }
+
+            // Sync search input
+            if (searchInput) {
+                searchInput.value = dropdown.value;
+            }
+        }
+
+        // scAtlas Cell Type Bar Chart
+        function updateScatlasCelltypeBar() {
+            const container = document.getElementById('scatlas-celltype-bar');
+            if (!container) return;
+
+            const ctData = state.data.scatlascelltypes;
+            if (!ctData) {
+                container.classList.remove('loading');
+                container.innerHTML = '<p style="text-align:center; color:#666; padding:2rem;">Cell type data not available.</p>';
+                return;
+            }
+
+            const sigType = document.getElementById('ct-sig-type')?.value || 'CytoSig';
+            const organFilter = document.getElementById('ct-organ-filter')?.value || '';
+            const searchInput = document.getElementById('scatlas-ct-protein-search')?.value?.trim();
+            const signature = searchInput || document.getElementById('scatlas-ct-protein-dropdown')?.value || 'IFNG';
+
+            // Filter data by signature type and signature
+            let data = ctData.data.filter(d => d.signature_type === sigType && d.signature === signature);
+
+            // Filter by organ if selected
+            if (organFilter) {
+                data = data.filter(d => d.organ === organFilter);
+            }
+
+            if (data.length === 0) {
+                container.classList.remove('loading');
+                container.innerHTML = `<p style="text-align:center; color:#666; padding:2rem;">No data for ${signature} in selected organ.</p>`;
+                return;
+            }
+
+            // Aggregate by cell type (average across organs if not filtered)
+            const cellTypeMap = {};
+            data.forEach(d => {
+                if (!cellTypeMap[d.cell_type]) {
+                    cellTypeMap[d.cell_type] = { sum: 0, count: 0 };
+                }
+                cellTypeMap[d.cell_type].sum += d.mean_activity;
+                cellTypeMap[d.cell_type].count += 1;
+            });
+
+            const barData = Object.entries(cellTypeMap)
+                .map(([ct, v]) => ({ cell_type: ct, mean: v.sum / v.count }))
+                .sort((a, b) => b.mean - a.mean)
+                .slice(0, 25);
+
+            // Update subtitle
+            const subtitle = document.getElementById('scatlas-celltype-bar-subtitle');
+            if (subtitle) {
+                const organText = organFilter ? ` in ${organFilter}` : ' across all organs';
+                subtitle.textContent = `${signature} activity${organText} (top 25 cell types)`;
+            }
+
+            container.classList.remove('loading');
+            Plotly.purge(container);
+
+            Plotly.newPlot(container, [{
+                type: 'bar',
+                orientation: 'h',
+                y: barData.map(d => d.cell_type),
+                x: barData.map(d => d.mean),
+                marker: {
+                    color: barData.map(d => d.mean >= 0 ? '#1f77b4' : '#d62728')
+                },
+                hovertemplate: '<b>%{y}</b><br>Activity: %{x:.3f}<extra></extra>'
+            }], {
+                xaxis: { title: `${signature} Activity (z-score)`, zeroline: true },
+                yaxis: { automargin: true },
+                margin: { l: 150, r: 30, t: 20, b: 50 },
+                height: Math.max(400, barData.length * 20)
+            }, { responsive: true });
+        }
+
         // Update cell type heatmap
         function updateCelltypeHeatmap() {
             const container = document.getElementById('celltype-heatmap');
             const sigType = document.getElementById('ct-sig-type')?.value || 'CytoSig';
             const organFilter = document.getElementById('ct-organ-filter')?.value || '';
-            const searchTerm = document.getElementById('celltype-search')?.value?.toLowerCase() || '';
 
             const ctData = state.data.scatlascelltypes;
             if (!ctData) return;
@@ -3766,16 +3925,8 @@
                 ? (ctData.cytosig_signatures || [...new Set(data.map(d => d.signature))].sort())
                 : (ctData.secact_signatures || [...new Set(data.map(d => d.signature))].sort());
 
-            // Get unique cell types from filtered data
-            let cellTypes = [...new Set(data.map(d => d.cell_type))];
-
-            // Filter by search term
-            if (searchTerm) {
-                cellTypes = cellTypes.filter(ct => ct.toLowerCase().includes(searchTerm));
-            }
-
-            // Limit to 50 for performance
-            cellTypes = cellTypes.slice(0, 50);
+            // Get unique cell types from filtered data - limit to 50 for performance
+            let cellTypes = [...new Set(data.map(d => d.cell_type))].slice(0, 50);
 
             // Update subtitle
             const subtitle = document.getElementById('celltype-heatmap-subtitle');
@@ -6542,9 +6693,43 @@
                 updateOrganBarChart();
                 updateOrganHeatmap();
             });
-            document.getElementById('ct-sig-type')?.addEventListener('change', updateCelltypeHeatmap);
-            document.getElementById('ct-organ-filter')?.addEventListener('change', updateCelltypeHeatmap);
-            document.getElementById('celltype-search')?.addEventListener('input', debounce(updateCelltypeHeatmap, 300));
+            // scAtlas Cell Types controls
+            document.getElementById('ct-sig-type')?.addEventListener('change', () => {
+                populateScatlasCelltypeDropdown();
+                updateScatlasCelltypeBar();
+                updateCelltypeHeatmap();
+            });
+            document.getElementById('ct-organ-filter')?.addEventListener('change', () => {
+                updateScatlasCelltypeBar();
+                updateCelltypeHeatmap();
+            });
+
+            // scAtlas Cell Types protein dropdown
+            document.getElementById('scatlas-ct-protein-dropdown')?.addEventListener('change', (e) => {
+                const searchInput = document.getElementById('scatlas-ct-protein-search');
+                if (searchInput) searchInput.value = e.target.value;
+                updateScatlasCelltypeBar();
+            });
+
+            // scAtlas Cell Types protein search autocomplete
+            const scatlasCelltypeSearch = document.getElementById('scatlas-ct-protein-search');
+            if (scatlasCelltypeSearch) {
+                scatlasCelltypeSearch.addEventListener('focus', showScatlasCelltypeSuggestions);
+                scatlasCelltypeSearch.addEventListener('input', showScatlasCelltypeSuggestions);
+                scatlasCelltypeSearch.addEventListener('keydown', (e) => {
+                    if (e.key === 'Enter') {
+                        document.getElementById('scatlas-ct-suggestions').style.display = 'none';
+                        const dropdown = document.getElementById('scatlas-ct-protein-dropdown');
+                        if (dropdown) dropdown.value = e.target.value;
+                        updateScatlasCelltypeBar();
+                    }
+                });
+                scatlasCelltypeSearch.addEventListener('blur', () => {
+                    setTimeout(() => {
+                        document.getElementById('scatlas-ct-suggestions').style.display = 'none';
+                    }, 200);
+                });
+            }
 
             // Control changes - Cancer comparison
             document.getElementById('cancer-sig-type')?.addEventListener('change', () => {
