Update scAtlas SecAct labels to show full protein count (1,170)
The data already contains all 1,170 SecAct signatures including IFNG.
Updated misleading "top 50" labels in:
- Cell Types tab
- Tumor vs Adjacent tab
- Cross-Atlas Signature Correlation tab

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -1835,7 +1835,7 @@
                         <label>Signature Type</label>
                         <select id="ct-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
-                            <option value="SecAct">SecAct (top 50 proteins)</option>
+                            <option value="SecAct">SecAct (1,170 proteins)</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -1881,7 +1881,7 @@
                         <label>Signature Type</label>
                         <select id="cancer-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
-                            <option value="SecAct">SecAct (top 50 proteins)</option>
+                            <option value="SecAct">SecAct (1,170 proteins)</option>
                         </select>
                     </div>
                     <div class="control-group">
@@ -2330,7 +2330,7 @@
                         <label>Signature Type</label>
                         <select id="sigcorr-sig-type">
                             <option value="CytoSig">CytoSig (43 cytokines)</option>
-                            <option value="SecAct">SecAct (top 50)</option>
+                            <option value="SecAct">SecAct (1,170 proteins)</option>
                         </select>
                     </div>
                     <div class="control-group">
